# uptrade

./: .mcp.json  README.md  pyproject.toml
context/: project-brief.md  tech-stack.md
docker/: .env.example  Dockerfile.dashboard  docker-compose.yml  healthcheck.sh  init-hbapi.sh  init.sql
docker/gateway/: gateway-setup-instructions.md
docs/: architecture.md  deployment.md  indicators.md  mcp-workflows.md
planning/: PRD-001-uptrade.md
planning/prps/active/: PRP-001-docker-foundation.md  PRP-002-project-config.md  PRP-003-polygon-ingestion.md  PRP-004-tsdb-readwrite.md  PRP-005-data-updater.md  PRP-006-port-indicators.md  PRP-007-mtf-cycle-detector.md  PRP-008-signal-combiner.md  PRP-009-v2-controller-bridge.md  PRP-010-bot-deployment.md  PRP-011-gateway-dex.md  PRP-012-dashboard-monitoring.md  PRP-013-dashboard-cycles.md  (+2 more)
scripts/: deploy_bot.py  run_updater.py  setup_gateway.py
src/: __init__.py  enums.py  logging_config.py  types.py
src/config/: __init__.py  bot_config.py  deployer.py  gateway_config.py  settings.py
src/controllers/: __init__.py  base_vbt_controller.py  cycle_controller.py  sniper_controller.py  vzo_controller.py
src/dashboard/: __init__.py  app.py
src/data/: __init__.py  db.py  polygon_client.py  tsdb.py  updater.py
src/indicators/: __init__.py  astro_lib.py  backtest.py  celestial_channels.py  ma_library.py  mtf_cycles.py  optimize.py  signals.py  sniper.py  spectral.py  vzo.py
src/signals/: __init__.py  combiner.py
tests/: __init__.py  conftest.py  test_controllers.py  test_data_pipeline.py  test_e2e.py  test_indicators.py
(+15 files in other folders)
